# Synthese

./: CMakeLists.txt
gKit/: material_data.h  mesh.cpp  mesh_data.cpp  mesh_data.h  window.cpp
src/: LoadMesh.cpp  LoadMesh.h  Player.cpp  Player.h  Shader.cpp  Shader.h  main.cpp  tp1.cpp
src/Shaders/: AO.glsl  SSR.glsl  mesh.glsl  mesh_viewer.glsl  prePass.glsl  shader1.glsl  testBuffer.glsl
